# H5Z-SPERR

./: CMakeLists.txt  README.md
include/: bitmask_compactor.h  compactor.h  h5z-bitstream.h  h5z-sperr.h  h5zsperr_helper.h  icecream.h
src/: CMakeLists.txt  bitmask_compactor.c  compactor.c  h5z-bitstream.c  h5z-md5.c  h5z-sperr.c  h5zsperr_helper.c  h5zsperr_helper.cpp
test_scripts/: CMakeLists.txt  bitmask_compactor_test.cpp  bitstream_test.cpp  compactor_test.cpp  h5zsperr_helper_test.cpp  icecream_test.cpp
utilities/: .md5-example.c.swp  CMakeLists.txt  example-2d.c  example-3d.c  generate_cd_values.c  md5-example.c  sperr-example-2d.c  sperr-example-3d.c  sperr-example.c
